--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:lts
+      - image: node
     steps:
       - checkout
       - run: npm run build
   test:
     docker:
-      - image: circleci/node:lts
+      - image: node
     steps:
       - checkout
       - run:
