--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,11 +18,12 @@ jobs:
           # openssl aes-256-cbc -e -in gas-test-credentials.json -out encrypted-credentials -k $KEY
           command: openssl aes-256-cbc -d -in encrypted-credentials -k $KEY > gas-test-credentials.json
       - run: npm ci
+      - run: mkdir -p test-results
       - run:
           name: Test
-          command: npm test -- -r xunit -o result.xml --suppress_console
+          command: npm test -- -r xunit -o test-results/result.xml --suppress_console
       - store_test_results:
-          path: result.xml
+          path: test-results
 
 workflows:
   version: 2
