--- a/src/appsscript.json
+++ b/src/appsscript.json
@@ -6,5 +6,8 @@
   "executionApi": {
     "access": "MYSELF"
   },
+  "oauthScopes": [
+    "https://www.googleapis.com/auth/spreadsheets"
+  ],
   "runtimeVersion": "V8"
 }
