--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_681738214e5f_key -iv $encrypted_681738214e5f_iv -in gas-test-credentials.json.enc -out gas-test-credentials.json -d
-  - openssl aes-256-cbc -K $encrypted_e303f8125453_key -iv $encrypted_e303f8125453_iv -in .clasprc.json.enc -out ~\/.clasprc.json -d
+  - openssl aes-256-cbc -K $encrypted_e303f8125453_key -iv $encrypted_e303f8125453_iv -in .clasprc.json.enc -out $HOME/.clasprc.json -d
 script:
   - npm build
   - npm test
