--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -38,6 +38,6 @@ jobs:
       run: openssl aes-256-cbc -d -in encrypted-credentials -k $KEY > gas-test-credentials.json
       env:
         KEY: ${{ secrets.KEY }}
-    - run: npm test -- -r xunit -o test-results/result.xml --suppress_console
+    - run: npm test
       env:
         CI: true
