--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gas-test": "0.5.1",
     "gas-test-cli": "0.6.0",
     "mkdirp": "1.0.4",
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "tsify": "^4.0.1"
   },
   "scripts": {
     "initialize": "mkdirp dest",
@@ -27,7 +28,7 @@
     "pretest": "npm-run-all test:*",
     "test": "gas-test run -c gas-test-credentials.json",
     "prebuild": "npm-run-all initialize build:manifest",
-    "build": "browserify src/index.js -p gasify -o dest/index.js",
+    "build": "browserify src/index.ts -p tsify -p gasify -o dest/index.js",
     "upload": "clasp push --force",
     "deploy": "npm-run-all build upload"
   },
